@@ -9,6 +9,7 @@ test8
 test9
 test10
 test11
+test12
 Makefile.in
 Makefile
 .deps
